# SnooSpoof-backend-api

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  praw.ini  pyproject.toml
api/: middleman.py
design/: SnooSpoof.fig
generate/: scrapper.py  scrapper_unittest.py  verify.py  verify_unittest.py
parse/: README.md  gentext2json.py  gentext2json_unittest.py
sample_notebook/: README.md  google-colab.ipynb
src/SnooSpoof/api/: README.md  generate.py  middleman.py
src/SnooSpoof/generate/: README.md  encoder.py  scrapper.py  trainer.py
src/SnooSpoof/parse/: README.md  convert.py  gentext2json.py  util.py
src/SnooSpoof/tests/: encoder_unittest.py  from_infill_unittest.py  gentext2dict_unittest.py  gentext2json_unittest.py  scrapper_unittest.py  test_dataset_utils.py  trainer_unittest.py  verify_unittest.py
